manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yrpetclinic-deploy
  labels:
    app.kubernetes.io/name: yrpetclinic-deploy
    kubernetes.azure.com/generator: devhub
  namespace: namespace-workflow-1775472923356
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: yrpetclinic-deploy
  template:
    metadata:
      labels:
        app.kubernetes.io/name: yrpetclinic-deploy
    spec:
      containers:
        - name: yrpetclinic-deploy
          image: yrsiacr.azurecr.io/image-workflow-1775472923356:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "0.5"
              memory: "0.5Gi"
            limits:
              cpu: "1"
              memory: "1Gi"
          livenessProbe:
            tcpSocket:
              port: 8080
          readinessProbe:
            tcpSocket:
              port: 8080
            periodSeconds: 5
            timeoutSeconds: 5
            failureThreshold: 1
            successThreshold: 1
            initialDelaySeconds: 3
          startupProbe:
            tcpSocket:
              port: 8080
            periodSeconds: 10
            timeoutSeconds: 1
            failureThreshold: 3
            successThreshold: 1
            initialDelaySeconds: 0
          securityContext:
            seccompProfile:
              type: RuntimeDefault
            capabilities:
              drop:
                - ALL
              add:
                - SETPCAP
                - MKNOD
                - AUDIT_WRITE
                - CHOWN
                - DAC_OVERRIDE
                - FOWNER
                - FSETID
                - KILL
                - SETGID
                - SETUID
                - NET_BIND_SERVICE
                - SYS_CHROOT
                - SETFCAP
                - SYS_PTRACE
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              topologyKey: kubernetes.io/hostname
              labelSelector:
                matchLabels:
                  app.kubernetes.io/name: yrpetclinic-deploy
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app.kubernetes.io/name: yrpetclinic-deploy
